--- a/Financas.Web.csproj
+++ b/Financas.Web.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="outros\**" />
+    <Content Remove="outros\**" />
+    <EmbeddedResource Remove="outros\**" />
+    <None Remove="outros\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.2.0" />
   </ItemGroup>
